--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@line/bot-sdk": "^7.5.0",
     "express": "^4.18.2",
-    "@line/bot-sdk": "^7.5.0"
+    "node-fetch": "^2.6.7"
   }
 }
