--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": {
-    "@line/bot-sdk": "^7.5.0",
-    "express": "^4.18.2",
-    "node-fetch": "^2.6.7"
-  }
+ "dependencies": {
+  "@line/bot-sdk": "^7.5.0",
+  "@google-cloud/vision": "^4.4.0",
+  "express": "^4.18.2"
 }
+
