--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "uramesshi-bot",
+  "name": "urameshi-bot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
- "dependencies": {
-  "@line/bot-sdk": "^7.5.0",
-  "@google-cloud/vision": "^4.4.0",
-  "express": "^4.18.2"
+  "dependencies": {
+    "express": "^4.18.2",
+    "@line/bot-sdk": "^7.5.0",
+    "@google-cloud/vision": "^4.4.0"
+  }
 }
-
