--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "urameshi-bot",
+  "name": "uramesshi-bot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "@line/bot-sdk": "^7.5.0",
-    "@google-cloud/vision": "^4.4.0"
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.7",
+    "@google-cloud/vision": "^3.4.0"
   }
 }
