--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uramesshi-bot",
+  "name": "urameshi-bot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,6 +9,6 @@
     "@line/bot-sdk": "^7.5.0",
     "express": "^4.18.2",
     "node-fetch": "^2.6.7",
-    "@google-cloud/vision": "^3.3.0"
+    "@google-cloud/vision": "^2.4.2"
   }
 }
